--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,14 @@ name: Continuous integration
 on:
   push:
     branches:
-      - master
+      - main
     tags:
       - v*
     paths-ignore:
       - 'README.md'
   pull_request:
     branches:
-      - master
+      - main
 
 jobs:
   check-style:
