--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ paste = "1.0.7"
 serde = "1.0.137"
 serde_json = "1.0"
 thiserror = "1.0.31"
-tokio = { version = "1.18.2", features = ["macros", "rt", "sync"] }
+tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
 
 # subxt
 subxt = { git = "https://github.com/paritytech/subxt" }
