--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,17 +87,11 @@ jobs:
         run: cargo hack check --workspace --each-feature --all-targets
 
   tests_ubuntu:
-    name: Run nextests on Ubuntu
+    name: Run tests on Ubuntu
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
+      - name: Checkout staking-miner sources
         uses: actions/checkout@v3
-
-      - name: Checkout polkadot source
-        uses: actions/checkout@v3
-          with:
-            name: paritytech/polkadot
-            ref: refs/heads/master
 
       - name: Install Rust stable toolchain
         uses: actions-rs/toolchain@v1.0.7
@@ -106,17 +100,11 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Install cargo-nextest
-        uses: baptiste0928/cargo-install@v1
-        with:
-          crate: cargo-nextest
-          version: 0.9
-
       - name: Rust Cache
         uses: Swatinem/rust-cache@v1.4.0
 
-      - name: Show Working directory
+      - name: Show working directory
         run: ls
 
-      - name: Cargo nextest
-        run: cargo nextest run --workspace
+      - name: Cargo test
+        run: cargo test --workspace
