--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -47,12 +47,13 @@ jobs:
           cargo build --release --features fast-runtime
           mkdir -p ~/.local/bin
           mv ./target/release/polkadot ~/.local/bin
+          polkadot --version
           cd -
           rm -rf polkadot
 
       - name: Cargo test
         run: |
-          cargo test --workspace --all-features
+          RUST_LOG=info cargo test --workspace --all-features -- --nocapture
           cargo clean
 
       # If the previous step fails, create a new Github issue
