hopefully fix tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master
 
 [dev-dependencies]
 assert_cmd = "2.0.2"
+sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [features]
 slow-tests = []
