--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -18,6 +18,4 @@ match_block_trailing_comma = true
 trailing_comma = "Vertical"
 trailing_semicolon = false
 use_field_init_shorthand = true
-ignore = [
-    "bridges",
-]
+ignore = [ ]
