--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,7 @@ nightly-test:
   rules:
     - if: $CI_COMMIT_REF_NAME == "145" # for test purpose, replace with schedule
   script:
-    - git clone --depth 1 git@github.com:paritytech/polkadot.git polkadot
+    - git clone --depth 1 https://github.com/paritytech/polkadot.git polkadot
     - ls
     - cd polkadot
     - cargo build --release --features fast-runtime
