--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,8 @@ variables:
 
 .publish-refs:                     &publish-refs
   rules:
+    - if: '$CI_PIPELINE_SOURCE == "schedule"'
+      when: never
     - if: $CI_COMMIT_REF_NAME == "main"
     - if: $CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+.*$/              # i.e. v1.0, v2.1rc1
 
@@ -54,17 +56,13 @@ nightly-test:
   stage:                          nightly-test
   <<:                             *docker-env
   rules:
-    - if: $CI_COMMIT_REF_NAME == "145" # for test purpose, replace with schedule
+    - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
-    - git clone --depth 1 https://github.com/paritytech/polkadot.git polkadot
-    - ls
+    - git clone -b master --depth 1 https://github.com/paritytech/polkadot.git polkadot
     - cd polkadot
     - cargo build --release --features fast-runtime
     - mkdir -p ~/.local/bin
-    - mv ./target/release/polkadot ~/.local/bin
-    - ls ~/.local/bin
-    - pwd
-    - export PATH="$HOME/.local/bin:$PATH"
+    - mv ./target/release/polkadot /usr/bin
     - polkadot --version
     - cd -
     - rm -rf polkadot
