test failure notification

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,9 @@ nightly-test:
   <<:                             *docker-env
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
+    - if: $CI_COMMIT_REF_NAME == "145" # REMOVE AFTER DEBUG
   script:
+    - failure
     - git clone -b master --depth 1 https://github.com/paritytech/polkadot.git polkadot
     - cd polkadot
     - cargo build --release --features fast-runtime
@@ -68,6 +70,16 @@ nightly-test:
     - rm -rf polkadot
     - RUST_LOG=info cargo test --workspace --all-features -- --nocapture
     - cargo clean
+
+nightly-test-failure:
+  stage: nightly-test
+  when: on_failure
+  script:
+    - |
+      'curl -X POST -H "Accept: application/vnd.github+json"
+      -H "Authorization: token $GITHUB_TOKEN" \
+      https://api.github.com/repos/paritytech/staking-miner-v2/actions/workflows/nightly-fail.yml/dispatches \
+      -d '{"ref":"sk-move-nightly-to-gitlab","inputs":{"gitlab_pipeline":"$CI_PIPELINE_URL"}}''
 
 ### stage:                        build
 
