--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -73,6 +73,7 @@ nightly-test:
 
 nightly-test-failure:
   stage:                           nightly-test
+  image:                           "${CI_IMAGE}"
   needs:                           ["nightly-test"]
   when:                            on_failure
   script:
