--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,12 +77,11 @@ nightly-test-failure:
   needs:                           ["nightly-test"]
   when:                            on_failure
   script:
-    - |
-      'MESSAGE=(curl
+    - 'MESSAGE=(curl
         -X POST
         -H "Accept: application/vnd.github+json"
         -H "Authorization: token ${GITHUB_TOKEN}"
-        https://api.github.com/repos/paritytech/staking-miner-v2/actions/workflows/nightly-fail.yml/dispatches
+        "https://api.github.com/repos/paritytech/staking-miner-v2/actions/workflows/nightly-fail.yml/dispatches"
         -d $"{
            \"ref\": \"sk-move-nightly-to-gitlab\",
            \"inputs\": {\"gitlab_pipeline\":\"${CI_PIPELINE_URL}\"}}");'
