--- a/.github/workflows/nightly-fail.yml
+++ b/.github/workflows/nightly-fail.yml
@@ -6,13 +6,22 @@ on:
       gitlab_pipeline:
         description: 'Link to failed pipeline'
         required: true
-        default: 'pipeline_link'
 
 jobs:
-  log-the-inputs:
+  create-an-issue:
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Failed pipeline: $GITLAB_PIPELINE_ID"
+      - name: Create an issue
+        uses: JasonEtco/create-an-issue@v2
         env:
-          GITLAB_PIPELINE_ID: ${{ inputs.gitlab_pipeline }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLAB_PIPELINE_URL: ${{ inputs.gitlab_pipeline }}
+        with:
+          # Use this issue template:
+          filename: .github/issue_templates/nightly_run_failed_gitlab.md
+          # Update existing issue if found; hopefully will make it clearer
+          # that it is still an issue:
+          update_existing: true
+          # Look for new *open* issues in this search (we want to
+          # create a new one if we only find closed versions):
+          search_existing: open
