--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -6,9 +6,19 @@ on:
       gitlab_pipeline:
         description: 'Link to failed pipeline'
         required: true
+      gitlab_test_job_status:
+        description: 'GitLab test job status'
+        required: true
 
 jobs:
+  announce-status:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Announce a status
+        run: echo  ${{ inputs.gitlab_test_job_status }}
+
   create-an-issue:
+    if: ${{ inputs.gitlab_test_job_status == 'failed' }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout staking-miner sources
@@ -28,3 +38,6 @@ jobs:
           # Look for new *open* issues in this search (we want to
           # create a new one if we only find closed versions):
           search_existing: open
+
+      - name: Fail workflow if tests failed
+        run: exit 1
