cleanup and format

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,7 +75,7 @@ nightly-test:
     paths:
       - nightly_test_result
 
-nightly-test-failure:
+nightly-test-notification:
   stage:                           nightly-test
   image:                           paritytech/tools:latest
   rules:
@@ -83,17 +83,16 @@ nightly-test-failure:
   needs:                           ["nightly-test"]
   when:                            always
   script:
-    - TEST_JOB_STATUS=$(<nightly_test_result)
     - 'curl
         -X POST
         -H "Accept: application/vnd.github+json"
         -H "Authorization: token ${GITHUB_TOKEN}"
         "https://api.github.com/repos/paritytech/staking-miner-v2/actions/workflows/nightly.yml/dispatches"
         -d $"{\"ref\":\"main\",
-        \"inputs\":{
-          \"gitlab_pipeline\":\"${CI_PIPELINE_URL}\",
-          \"gitlab_test_job_status\":\"${TEST_JOB_STATUS}\"
-          }}"'
+              \"inputs\":{
+                \"gitlab_pipeline\":\"${CI_PIPELINE_URL}\",
+                \"gitlab_test_job_status\":\"${TEST_JOB_STATUS}\"
+              }}"'
   tags:
     - kubernetes-parity-build
 
