--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 stages:
+  - check
+  - test
   - nightly-test
   - build
   - publish
@@ -15,6 +17,15 @@ default:
 variables:
   # change to production after https://github.com/paritytech/ci_cd/issues/535 is closed
   CI_IMAGE:                        "paritytech/ci-linux:staging"
+
+.test-refs:                        &test-refs
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "web"
+    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME =~ /^[0-9]+$/                         # PRs
+    - if: $CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+.*$/              # i.e. v1.0, v2.1rc1
 
 .publish-refs:                     &publish-refs
   rules:
@@ -49,6 +60,49 @@ variables:
     expire_in:                     1 days
     paths:
       - ./artifacts/
+
+#### stage:                       check
+
+fmt:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *test-refs
+  script:
+    - cargo fmt --all -- --check
+  allow_failure:                   true
+
+clippy:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *test-refs
+  script:
+    - cargo clippy --all-targets
+  allow_failure:                   true
+
+check-docs:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *test-refs
+  script:
+    - RUSTDOCFLAGS="--cfg docsrs --deny rustdoc::broken_intra_doc_links"
+        cargo doc --verbose --workspace --no-deps --document-private-items --all-features
+
+check-code:
+  stage:                            check
+  <<:                              *docker-env
+  <<:                              *test-refs
+  script:
+    - cargo install cargo-hack
+    - cargo hack check --workspace --each-feature --all-targets
+
+### stage:                        test
+
+test-ubuntu:
+  stage:                          test
+  <<:                             *docker-env
+  <<:                             *test-refs
+  script:
+    - RUST_LOG=info cargo test --workspace -- --nocapture
 
 ### stage:                        nightly-test
 
