--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ fmt:
   <<:                              *docker-env
   <<:                              *test-refs
   script:
-    - cargo fmt --all -- --check
+    - cargo +nightly fmt --all -- --check
   allow_failure:                   true
 
 clippy:
@@ -76,7 +76,7 @@ clippy:
   <<:                              *docker-env
   <<:                              *test-refs
   script:
-    - cargo clippy --all-targets
+    - cargo +nightly clippy --all-targets
   allow_failure:                   true
 
 check-docs:
@@ -85,7 +85,7 @@ check-docs:
   <<:                              *test-refs
   script:
     - RUSTDOCFLAGS="--cfg docsrs --deny rustdoc::broken_intra_doc_links"
-        cargo doc --verbose --workspace --no-deps --document-private-items --all-features
+        cargo +nightly doc --verbose --workspace --no-deps --document-private-items --all-features
 
 check-code:
   stage:                            check
