--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,6 +99,7 @@ check-code:
 
 test-ubuntu:
   stage:                          test
+  needs:                          []
   <<:                             *docker-env
   <<:                             *test-refs
   script:
