Move CI GHA tests to GitLab (#157)
* move ci gha to gitlab

* add nightly

* exec test stage in parallel

* remove allow_failure

* fix indent and rename refs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
 stages:
+  - check
+  - test
   - nightly-test
   - build
   - publish
@@ -15,6 +17,15 @@ default:
 variables:
   # change to production after https://github.com/paritytech/ci_cd/issues/535 is closed
   CI_IMAGE:                        "paritytech/ci-linux:staging"
+
+.common-refs:                      &common-refs
+  rules:
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "web"
+    - if: $CI_COMMIT_REF_NAME == "main"
+    - if: $CI_COMMIT_REF_NAME =~ /^[0-9]+$/                         # PRs
+    - if: $CI_COMMIT_REF_NAME =~ /^v[0-9]+\.[0-9]+.*$/              # i.e. v1.0, v2.1rc1
 
 .publish-refs:                     &publish-refs
   rules:
@@ -50,11 +61,53 @@ variables:
     paths:
       - ./artifacts/
 
-### stage:                        nightly-test
+#### stage:                        check
+
+fmt:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *common-refs
+  script:
+    - cargo +nightly fmt --all -- --check
+
+clippy:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *common-refs
+  script:
+    - cargo +nightly clippy --all-targets
+
+check-docs:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *common-refs
+  script:
+    - RUSTDOCFLAGS="--cfg docsrs --deny rustdoc::broken_intra_doc_links"
+        cargo +nightly doc --verbose --workspace --no-deps --document-private-items --all-features
+
+check-code:
+  stage:                           check
+  <<:                              *docker-env
+  <<:                              *common-refs
+  script:
+    - cargo install cargo-hack
+    - cargo hack check --workspace --each-feature --all-targets
+
+### stage:                         test
+
+test-ubuntu:
+  stage:                           test
+  needs:                           []
+  <<:                              *docker-env
+  <<:                              *common-refs
+  script:
+    - RUST_LOG=info cargo test --workspace -- --nocapture
+
+### stage:                         nightly-test
 
 nightly-test:
-  stage:                          nightly-test
-  <<:                             *docker-env
+  stage:                           nightly-test
+  <<:                              *docker-env
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
@@ -83,6 +136,7 @@ nightly-test-notification:
   needs:                           ["nightly-test"]
   when:                            always
   script:
+    - TEST_JOB_STATUS=$(<nightly_test_result)
     - 'curl
         -X POST
         -H "Accept: application/vnd.github+json"
@@ -96,7 +150,7 @@ nightly-test-notification:
   tags:
     - kubernetes-parity-build
 
-### stage:                        build
+### stage:                         build
 
 build:
   stage:                           build
