--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master
 # prometheus
 prometheus = "0.13"
 hyper = { version = "0.14.20", features = ["server", "http1", "http2", "tcp"] }
-lazy_static = "1"
+once_cell = "1.13"
 
 [dev-dependencies]
 assert_cmd = "2.0"
