--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 futures = "0.3"
 thiserror = "1.0"
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync", "signal"] }
+pin-project-lite = "0.2"
 
 # subxt
 subxt = { git = "https://github.com/paritytech/subxt" }
