--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,11 @@ futures = "0.3"
 thiserror = "1.0"
 tokio = { version = "1.20", features = ["macros", "rt-multi-thread", "sync", "signal"] }
 pin-project-lite = "0.2"
+parking_lot = "0.12.1"
 
 # subxt
 subxt = { git = "https://github.com/paritytech/subxt" }
+scale-value = "0.5.0"
 
 # substrate
 sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
