--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
   - package-ecosystem: "cargo"
     directory: "/"
-    # Handle updates for substrate polkadot manually.
+    # Handle updates for substrate and polkadot manually.
     ignore:
       - dependency-name: "substrate-*"
       - dependency-name: "sc-*"
