--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,11 @@ pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", 
 sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "master" }
 frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
+
+# runtimes
+polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
+kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
+westend-runtime = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
 
 # prometheus
 prometheus = "0.13"
@@ -46,6 +50,10 @@ sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master
 [features]
 default = ["polkadot", "kusama", "westend"]
 slow-tests = []
-westend = []
-polkadot = []
-kusama = []
+westend = ["westend-runtime"]
+polkadot = ["polkadot-runtime"]
+kusama = ["kusama-runtime"]
+
+[patch.crates-io]
+sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
