--- a/staking-miner-test-node/node/Cargo.toml
+++ b/staking-miner-test-node/node/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "node-template"
+name = "staking-miner-playground"
 version = "4.0.0-dev"
 description = "A fresh FRAME-based Substrate node, ready for hacking."
 authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
@@ -14,7 +14,7 @@ build = "build.rs"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [[bin]]
-name = "node-template"
+name = "staking-miner-playground"
 
 [dependencies]
 clap = { version = "4.0.9", features = ["derive"] }
