--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ once_cell = "1.16"
 [dev-dependencies]
 assert_cmd = "2.0"
 sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
+regex = "1.7"
 
 [features]
 default = ["polkadot", "kusama", "westend"]
