--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0" }
 scale-info = { package = "scale-info", version = "2.3.0" }
 clap = { version = "3.2", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"]   }
-jsonrpsee = { version = "0.15.1", features = ["ws-client", "macros"] }
+jsonrpsee = { version = "0.16", features = ["ws-client"] }
 log = "0.4"
 paste = "1.0"
 serde = "1.0"
@@ -20,7 +20,7 @@ tokio = { version = "1.21", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = { git = "https://github.com/paritytech/subxt" }
+subxt = "0.25.0"
 scale-value = "0.6.0"
 
 # substrate
