--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,18 +20,19 @@ tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = "0.25.0"
+subxt = "0.27.1"
 scale-value = "0.6.0"
 
 # substrate
-sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-election-provider-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-version = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-io = "17.0.0"
+frame-system = "16.0.0"
+frame-election-provider-support = "16.0.0"
+pallet-election-provider-multi-phase = "15.0.0"
+sp-npos-elections = "14.0.0"
+frame-support = "16.0.0"
+sp-version = "16.0.0"
+sp-core = "16.0.0"
+sp-runtime = "18.0.0"
 
 # prometheus
 prometheus = "0.13"
@@ -40,7 +41,7 @@ once_cell = "1.17"
 
 [dev-dependencies]
 assert_cmd = "2.0"
-sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-storage = "11.0.0"
 
 [features]
 default = ["polkadot", "kusama", "westend"]
