--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,8 @@ once_cell = "1.17"
 [dev-dependencies]
 assert_cmd = "2.0"
 sp-storage = "11.0.0"
+sp-keyring = "18.0.0"
+regex = "1"
 
 [features]
 default = ["polkadot", "kusama", "westend"]
