--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -213,3 +213,20 @@ build-push-image:
     - buildah push --format=v2s2 "$IMAGE_NAME:$VERSION"
   after_script:
     - buildah logout --all
+
+publish-docker-image-description:
+  stage:                           publish
+  <<:                              *kubernetes-env
+  image:                           paritytech/dockerhub-description
+  variables:
+    DOCKER_USERNAME:               $Docker_Hub_User_Parity
+    DOCKER_PASSWORD:               $Docker_Hub_Pass_Parity
+    README_FILEPATH:               $CI_PROJECT_DIR/Dockerfile.README.md
+    DOCKERHUB_REPOSITORY:          paritytech/staking-miner-v2
+    SHORT_DESCRIPTION:             "staking-miner-v2"
+  rules:
+  - if: $CI_COMMIT_REF_NAME == "main"
+    changes:
+    - Dockerfile.README.md
+  script:
+    - cd / && sh entrypoint.sh
