--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,19 +20,18 @@ tokio = { version = "1.26", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = "0.27.1"
+subxt = { git = "https://github.com/paritytech/subxt" }
 scale-value = "0.6.0"
 
 # substrate
-sp-io = "17.0.0"
-frame-system = "16.0.0"
-frame-election-provider-support = "16.0.0"
-pallet-election-provider-multi-phase = "15.0.0"
-sp-npos-elections = "14.0.0"
-frame-support = "16.0.0"
-sp-version = "16.0.0"
-sp-core = "16.0.0"
-sp-runtime = "18.0.0"
+sp-io = { git = "https://github.com/paritytech/substrate" }
+frame-system = { git = "https://github.com/paritytech/substrate" }
+frame-election-provider-support = { git = "https://github.com/paritytech/substrate" }
+pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate" }
+sp-npos-elections = { git = "https://github.com/paritytech/substrate" }
+frame-support = { git = "https://github.com/paritytech/substrate" }
+sp-version = { git = "https://github.com/paritytech/substrate" }
+sp-runtime = { git = "https://github.com/paritytech/substrate" }
 
 # prometheus
 prometheus = "0.13"
