--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,8 @@ default:
 
 variables:
   CI_IMAGE:                        "paritytech/ci-linux:production"
-  BUILDAH_IMAGE:                   "quay.io/buildah/stable:v1.27"
+  BUILDAH_IMAGE:                   "quay.io/buildah/stable:v1.29"
+  BUILDAH_COMMAND:                 "buildah --storage-driver overlay2"
 
 .common-refs:                      &common-refs
   rules:
@@ -98,6 +99,8 @@ check-staking-miner-playground:
   <<:                              *docker-env
   <<:                              *common-refs
   script:
+    - rustup target add wasm32-unknown-unknown --toolchain nightly
+    - cargo +nightly install wasm-gc
     - cargo check --manifest-path staking-miner-playground/Cargo.toml
 
 ### stage:                         test
@@ -197,7 +200,7 @@ build-push-image:
     - test "$DOCKER_USER" -a "$DOCKER_PASS" ||
         ( echo "no docker credentials provided"; exit 1 )
     - cd ./artifacts
-    - buildah bud
+    - $BUILDAH_COMMAND build
         --format=docker
         --build-arg VCS_REF="${CI_COMMIT_SHA}"
         --build-arg BUILD_DATE="$(date -u '+%Y-%m-%dT%H:%M:%SZ')"
@@ -208,9 +211,9 @@ build-push-image:
     # The job will success only on the protected branch
     - echo "$DOCKER_PASS" |
         buildah login --username "$DOCKER_USER" --password-stdin docker.io
-    - buildah info
-    - buildah push --format=v2s2 "$IMAGE_NAME:latest"
-    - buildah push --format=v2s2 "$IMAGE_NAME:$VERSION"
+    - $BUILDAH_COMMAND info
+    - $BUILDAH_COMMAND push --format=v2s2 "$IMAGE_NAME:latest"
+    - $BUILDAH_COMMAND push --format=v2s2 "$IMAGE_NAME:$VERSION"
   after_script:
     - buildah logout --all
 
