--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ hyper = { version = "0.14.25", features = ["server", "http1", "http2", "tcp"] }
 once_cell = "1.17"
 
 [dev-dependencies]
+anyhow = "1"
 assert_cmd = "2.0"
 sp-storage = "11.0.0"
 regex = "1"
