chore: remove unused deps and features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,10 @@ subxt = { git = "https://github.com/paritytech/subxt" }
 scale-value = "0.6.0"
 
 # substrate
-sp-io = { git = "https://github.com/paritytech/substrate" }
-frame-system = { git = "https://github.com/paritytech/substrate" }
 frame-election-provider-support = { git = "https://github.com/paritytech/substrate" }
 pallet-election-provider-multi-phase = { git = "https://github.com/paritytech/substrate" }
 sp-npos-elections = { git = "https://github.com/paritytech/substrate" }
 frame-support = { git = "https://github.com/paritytech/substrate" }
-sp-version = { git = "https://github.com/paritytech/substrate" }
 sp-runtime = { git = "https://github.com/paritytech/substrate" }
 
 # prometheus
@@ -44,9 +41,6 @@ sp-storage = "11.0.0"
 regex = "1"
 
 [features]
-default = ["polkadot", "kusama", "westend"]
+default = []
 slow-tests = []
 staking-miner-playground-tests = []
-westend = []
-polkadot = []
-kusama = []
