--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ once_cell = "1.17"
 [dev-dependencies]
 anyhow = "1"
 assert_cmd = "2.0"
-sp-storage = "11.0.0"
+sp-storage = { git = "https://github.com/paritytech/substrate" }
 regex = "1"
 
 [features]
