--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,8 @@ tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = { git = "https://github.com/paritytech/subxt" }
-scale-value = "0.6.0"
+subxt = "0.29"
+scale-value = "0.10.0"
 
 # substrate
 frame-election-provider-support = { git = "https://github.com/paritytech/substrate" }
@@ -37,7 +37,7 @@ once_cell = "1.17"
 [dev-dependencies]
 anyhow = "1"
 assert_cmd = "2.0"
-sp-storage = "11.0.0"
+sp-storage = { git = "https://github.com/paritytech/substrate" }
 regex = "1"
 
 [features]
