--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -121,7 +121,7 @@ nightly-test:
   rules:
     - if: $CI_PIPELINE_SOURCE == "schedule"
   script:
-    - git clone -b master --depth 1 https://github.com/paritytech/polkadot-sdk polkadot-sdk
+    - git clone -b master --depth 1 https://github.com/paritytech/polkadot-sdk.git polkadot-sdk
     - cd polkadot-sdk
     - cargo build -p polkadot --release --features fast-runtime
     - mkdir -p ~/.local/bin
