--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ codec = { package = "parity-scale-codec", version = "3.0.0" }
 scale-info = { package = "scale-info", version = "2.10.0" }
 clap = { version = "4.4", features = ["derive", "env"] }
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
-jsonrpsee = { version = "0.16", features = ["ws-client"] }
+jsonrpsee = { version = "0.20", features = ["ws-client"] }
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
@@ -19,8 +19,8 @@ tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = "0.29"
-scale-value = "0.10.0"
+subxt = { version = "0.32.1", features = ["substrate-compat"] }
+scale-value = "0.13.0"
 
 # polkadot-sdk
 frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk" }
