use `subxt-signer` to reduce the number of deps
Close #718

This commit reduces the dependency tree ~50 crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,15 +23,20 @@ tokio = { version = "1.34", features = ["macros", "rt-multi-thread", "sync", "si
 pin-project-lite = "0.2"
 
 # subxt
-subxt = { version = "0.32.1", features = ["substrate-compat"] }
 scale-value = "0.12.0"
+subxt = "0.32.1"
+subxt-signer = { version = "0.32.1", features = ["subxt"] }
 
 # polkadot-sdk
 frame-election-provider-support = "26.0.0"
 pallet-election-provider-multi-phase = "25.0.0"
-sp-npos-elections = "24.0.0"
 frame-support = "26.0.0"
+sp-npos-elections = "24.0.0"
+# Both `sp-runtime` and `sp-core` has plenty of dependencies
+# and because `pallet-election-provider-multi-phase` is depending
+# on them it's not much we can do it about it.
 sp-runtime = "29.0.0"
+sp-core = "26.0.0"
 
 # prometheus
 prometheus = "0.13"
